--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "6.3.3",
+  "version": "6.3.3-beta-react-testing-lazy-descendants.1",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -39,7 +39,7 @@
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^2.2.3"
+    "@shopify/react-testing": "^2.2.3-beta-react-testing-lazy-descendants.1"
   },
   "files": [
     "build/*",
