--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "1.1.7",
+  "version": "1.1.7-beta-react-testing-lazy-descendants.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications",
   "main": "index.js",
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-i18n-universal-provider/README.md",
   "dependencies": {
     "@shopify/react-hooks": "^1.12.3",
-    "@shopify/react-html": "^10.2.4",
+    "@shopify/react-html": "^10.2.4-beta-react-testing-lazy-descendants.1",
     "@shopify/react-i18n": "^5.3.1",
     "tslib": "^1.14.1"
   },
