--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "1.2.5",
+  "version": "1.2.5-beta-react-testing-lazy-descendants.1",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -25,7 +25,7 @@
   "dependencies": {
     "@shopify/async": "^2.2.3",
     "@shopify/react-hooks": "^1.12.3",
-    "@shopify/react-html": "^10.2.4",
+    "@shopify/react-html": "^10.2.4-beta-react-testing-lazy-descendants.1",
     "@shopify/react-intersection-observer": "^2.1.3",
     "@shopify/useful-types": "^2.3.3",
     "tslib": "^1.14.1"
