--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.21.5",
+  "version": "0.21.5-beta-react-testing-lazy-descendants.1",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -26,11 +26,11 @@
   "dependencies": {
     "@shopify/network": "^1.6.3",
     "@shopify/react-async": "^3.2.3",
-    "@shopify/react-cookie": "^0.1.5",
+    "@shopify/react-cookie": "^0.1.5-beta-react-testing-lazy-descendants.1",
     "@shopify/react-effect": "^3.3.3",
-    "@shopify/react-html": "^10.2.4",
+    "@shopify/react-html": "^10.2.4-beta-react-testing-lazy-descendants.1",
     "@shopify/react-hydrate": "^1.2.3",
-    "@shopify/react-network": "^3.6.5",
+    "@shopify/react-network": "^3.6.5-beta-react-testing-lazy-descendants.1",
     "@shopify/sewing-kit-koa": "^6.4.4",
     "@shopify/useful-types": "^2.3.3",
     "chalk": "^2.4.2",
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.3.3",
-    "@shopify/react-testing": "^2.2.3",
+    "@shopify/react-testing": "^2.2.3-beta-react-testing-lazy-descendants.1",
     "@shopify/with-env": "^1.2.3",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
