--- a/packages/react-tracking-pixel/package.json
+++ b/packages/react-tracking-pixel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-tracking-pixel",
-  "version": "3.1.5",
+  "version": "3.1.5-beta-react-testing-lazy-descendants.1",
   "license": "MIT",
   "description": "Allows React apps to easily embed tracking pixel iframes",
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-tracking-pixel/README.md",
   "dependencies": {
-    "@shopify/react-html": "^10.2.4",
+    "@shopify/react-html": "^10.2.4-beta-react-testing-lazy-descendants.1",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
