--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-universal-provider",
-  "version": "1.2.5",
+  "version": "1.2.5-beta-react-testing-lazy-descendants.1",
   "license": "MIT",
   "description": "Factory function and utilities to create self-serializing/deserializing providers that work for isomorphic applications",
   "main": "index.js",
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-universal-provider/README.md",
   "dependencies": {
     "@shopify/react-effect": "^3.3.3",
-    "@shopify/react-html": "^10.2.4",
+    "@shopify/react-html": "^10.2.4-beta-react-testing-lazy-descendants.1",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
