Relax version constraints for `graphql-tool-utilities` (#2238)
When fixing CVE-2022-24785 in the Fraud Filter app, the `graphql-tool-utilities` package was locking down to a specific version of `apollo-codegen-core`. A quick look at the history and asking on Slack doesn't reveal any particular reason why we need to be doing this so I'm relaxing the constraint. Once `apollo-language-server` removes the `moment` dependency with https://github.com/apollographql/apollo-tooling/issues/2323 that I've submitted a PR for, this change will allow users to upgrade and remove `moment` as well without this package getting in the way.

--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "apollo-codegen-core": "0.40.4",
+    "apollo-codegen-core": "^0.40.4",
     "graphql": ">=14.5.0 <16.0.0"
   },
   "files": [
